added all individual product pages

--- a/dog-b-clean.html
+++ b/dog-b-clean.html
@@ -124,7 +124,7 @@
 					
 					<div class="ingredientblock">
 						<p class="ingredients listfix">
-							Purified water, mild surfactant blend, fragrance, citric acid, preservative, dye.
+							Purified Water, Mild Surfactant Blend, Fragrance, Citric Acid, Preservative, Dye
 						</p>
 					</div><!--ingredientblock-->
 
