--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ DOGS
 
 <!-- DOG-B-CLEAN -->
 				<div class="shopblock">
-					<img src="images/products/Dog-B-Clean.png">
+					<img src="images/products/dog-b-clean.png">
 					<h3>Dog-B-Clean</h3>
 					<p class="subtitle">Natural Waterless Shampoo</p>
 					<p class="productdesc">Happy coat, happy dog! Keep your dog shiny and clean. Simply spray on and pet your dog. Great for the dog owner on the go. Veterinarian approved!</p>
@@ -351,7 +351,7 @@ HORSES
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Horse-B-Clean||a3495f05fae7dab13cb9ccc3b521a7fd2200c789b8bcbab0941f2dcd55ba8738&price=12.95||87bfec01b5411d06efe22b7a65308206bbc35c82542852fbf7868aac8e8de0eb&weight=2.4||5b3052a572b6f093855a139ff5011db109c42e16e687c92f6ab4782ed5786885&code=ss-05||2c587be38d9572de2727572c35be2200778c36c26d9a9cb9fb48f2f1a1120376" class="buynow">Buy Now</a>
 
-						<a href="horse-b-clean.html"><div class="moreinfo more1">
+						<a href="horse-b-clean.html"><div class="moreinfo more">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -366,12 +366,12 @@ HORSES
 					<p class="subtitle">Equine Joint Supplement</p>
 					<p class="productdesc">It's so easy to give, and horses love it! Improves and maintains normal joint function and helps stop bleeding. Veterinarian approved!</p> 
 
-					<a href="equine-joint-supplement.html"><div class="moreinfo morebucket">
+					<a href="equine-joint-supplement.html"><div class="moreinfo morebucket morebucket1">
 							More Info
 						</div></a>
 
 <!-- PAYPAL BUTTONS -->				
-					<div class="ordergroup">							
+					<div class="ordergroup eqgroup1">							
 						<div class="ordername eqname">
 							1 Month Supply<br>
 							<b>$35</b>
@@ -458,7 +458,7 @@ LIVESTOCK
 						<!-- Buy Now -->
 						<a href="https://stasound.foxycart.com/cart?name=Fly-B-Gone+for+Livestock||6b257e29f5f00c8c82949232f6776b01b897bb1bd0bcf8ed53cf2c3af1bc0c4c&price=15.95||9fa198c7f9617707595c14dd0e0ab0d1bcb1badff4300eb24af10dcf7a162710&weight=2.4||3a80d05452e14fc933df1b7902105aa4c3ec3858359a7f52d05766c361374218&code=fa-07||21693a2089e2acf254026c332f6f0bcc08fa8ceb16fc7a07cbac0c499ba96d4a" class="buynow">Buy Now</a>
 
-						<a href="livestock-fly-b-gone.html"><div class="moreinfo more1">
+						<a href="livestock-fly-b-gone.html"><div class="moreinfo more">
 							More Info
 						</div></a>
 					</div><!-- shopbuttons -->
@@ -470,7 +470,7 @@ LIVESTOCK
 					<img src="images/products/fix-a-stride.png" class="bucket bucketfix">
 					<h3>Fix-A-Stride</h3>
 					<p class="subtitle">Joint Supplement for Livestock Show Animals</p>
-					<p class="productdesc descfix">Fix-A-Stride Joint Supplement has the right combination and the proper amounts of ingredients to ensure the soundness of your show animals. Veterinarian approved!</p> 
+					<p class="productdesc descfix">Fix-A-Stride Joint Supplement has the right combination and the proper amounts of ingredients to ensure the soundness of your show animals. Veterinarian approved!</p><br> 
 
 					<a href="fix-a-stride.html"><div class="moreinfo morebucket morefix">
 							More Info
@@ -513,14 +513,16 @@ LIVESTOCK
 
 
 <!-- PAYPAL BUTTONS -->			
-<a href="fixastridetx.html">
-	<div class="texaslink txfix">
-		
-		<img src="http://s3.amazonaws.com/stasound/texasflagmap.png">
-			Texas Residents Click Here To Order
-		
-	</div>
-</a>		
+
+<!-- TEXAS -->
+				<a href="fixastridetx.html">
+					<div class="texaslink txfix">
+						
+						<img src="http://s3.amazonaws.com/stasound/texasflagmap.png">
+							Texas Residents Click Here To Order
+						
+					</div>
+				</a>		
 		
 
 				</div><!-- shopblock Fix-A-Stride -->
