--- a/odor-b-gone.html
+++ b/odor-b-gone.html
@@ -111,7 +111,7 @@
 <!-- TESTIMONY -->					
 					<div class="quoteblock">
 						<p class="productdesc moredesc"><span class="bigquote">&#8220;</span>
-							If you hav cats, you need to try Odor-B-Gone. This litter box odor eliminator really works, and it lasts a long time. Trust me, your family and friends will be glad you put some of this stuff in the litter box.
+							If you have cats, you need to try Odor-B-Gone. This litter box odor eliminator really works, and it lasts a long time. Trust me, your family and friends will be glad you put some of this stuff in the litter box.
 							&#8221;
 						</p>
 						<p class="quotename">&#8212; Tina from Colorado</p>
